--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+nav {
+  height: 4em;
+  background-color: #222;
+  width:100%;
+  padding:0;
+  margin:0;
+  display:flex;
+  justify-content: space-between;
+}
+
+nav > a {
+  color:white;
+  text-decoration: none;
+  flex:1;
+  max-width: 8em;
+  min-width: 8em;
+  display:flex;
+  flex-direction: column;
+  justify-self: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #222;
+  transition: background-color 0.2s linear;
+}
+
+nav > a:hover {
+  background-color: #333;
+}
