--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,63 @@ nav > a {
 nav > a:hover {
   background-color: #333;
 }
+
+.delete {
+  background-color: #f00;
+  color:#fff;
+}
+
+.btn {
+  cursor: pointer;
+  margin:auto;
+  display:block;
+}
+
+label, input {
+  display:block;
+  text-align:left;
+}
+input {
+  width:100%;
+  box-sizing: border-box;
+}
+
+p {
+  text-align: center;
+}
+
+.inputDiv {
+  width:20em;
+  margin:1em auto;
+  
+}
+
+table{
+  margin:auto;
+}
+th {
+  border-bottom:1px solid #000;
+}
+.error {
+  color: #f00;
+  font-weight: bold;
+  margin-top: 0.3em;
+  font-size: 0.9em;
+}
+
+.hidden{
+  visibility: hidden;
+}
+
+footer{
+  text-align:center;
+  color:white;
+  background-color: #222;
+  width:100%;
+  height:3em;
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  bottom:0;
+}
